# dandelion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: calgary.csv  la.csv
results/: calgary.txt  calgary_12month.txt  calgary_1month.txt  calgary_2month.txt  calgary_3month.txt  calgary_6month.txt  la.txt  la_1month.txt  la_2month.txt  la_3month.txt  la_6month.txt
src/: dandelion.cpp  iconset.rgi.h  raygui.c
